--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "chart.js": "^1.1.1",
     "google-map-react": "^0.24.0",
     "google-maps-react": "^1.0.19",
     "jquery": "^3.2.1",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-c3js": "^0.1.19",
+    "react-chartjs": "^0.8.0",
     "react-d3-basic": "^1.6.11",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
