--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "bulma": "^0.4.2",
     "chart.js": "^1.1.1",
     "google-map-react": "^0.24.0",
     "google-maps-react": "^1.0.19",
