--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "react-chartjs": "^0.8.0",
     "react-d3-basic": "^1.6.11",
     "react-dom": "^15.6.1",
+    "react-google-maps": "^6.3.0",
     "react-redux": "^5.0.5",
+    "react-scripts": "1.0.7",
     "redux": "^3.7.0",
     "redux-saga": "^0.15.3",
-    "xml2json": "^0.11.0",
-    "react-scripts": "1.0.7"
+    "xml2json": "^0.11.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
